# jack-image-converter

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.txt
.github/workflows/: deploy.yml
docs/: index.html
docs/assets/: index-Dnnr5TX8.js
src/: main.cpp
web/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: image.converter.ts  main.ts  string.utils.ts
